# kwin-effects-sliding-notifications

./: CMakeLists.txt  README.md
cmake/Modules/: Findkwineffects.cmake
src/: CMakeLists.txt  main.cpp  metadata.json  slidingnotificationsconfig.kcfg  slidingnotificationsconfig.kcfgc  slidingnotificationseffect.cpp  slidingnotificationseffect.h  slidingnotificationsplugin.cpp
